utilities/hdrhistogram.h
@@ -17,6 +17,7 @@
 
 #pragma once
 
+#include <folly/Synchronized.h>
 #include <nlohmann/json_fwd.hpp>
 #include <chrono>
 #include <memory>
@@ -49,6 +50,10 @@ class HdrHistogram {
         void operator()(struct hdr_histogram* val);
     };
 
+    using SyncHdrHistogramPtr = folly::Synchronized<
+            std::unique_ptr<struct hdr_histogram, HdrDeleter>>;
+    using HistoLockedPtr = SyncHdrHistogramPtr::ConstLockedPtr;
+
 public:
     struct Iterator : public hdr_iter {
         /**
@@ -77,10 +82,28 @@ public:
              */
             Percentiles
         };
+
+        Iterator(const SyncHdrHistogramPtr& SyncHistoPtr,
+                 Iterator::IterMode mode)
+            : hdr_iter(), type(mode), histoRLockPtr(SyncHistoPtr.rlock()) {
+        }
+
+        Iterator(Iterator&& itr) = default;
+
         IterMode type;
         uint64_t lastVal = 0;
         uint64_t lastCumulativeCount = 0;
         bool isFirst = true;
+
+    private:
+        // allow HdrHistogram to access histoRLockPtr
+        friend class HdrHistogram;
+        /**
+         * Read lock that's held for the life time of the iterator. To prevent
+         * it being resized or reset while we're reading from the underlying
+         * data structure.
+         */
+        HistoLockedPtr histoRLockPtr;
     };
 
     /**
@@ -172,7 +195,10 @@ public:
     uint64_t getMaxValue() const;
 
     /**
-     * Clears the histogram.
+     * Clears the histogram. Please not that this takes a write lock on the
+     * underlying data structure and will wait till all read locks have been
+     * released before completing and thus, could result in dead lock
+     * situations.
      */
     void reset();
 
@@ -311,7 +337,9 @@ public:
         // We subtract one from the lowest value as we have added a one offset
         // as the underlying hdr_histogram cannot store 0 and
         // therefore the value must be greater than or equal to 1.
-        return static_cast<uint64_t>(histogram->lowest_trackable_value) - 1;
+        return static_cast<uint64_t>(
+                       histogram.rlock()->get()->lowest_trackable_value) -
+               1;
     }
 
     /**
@@ -322,7 +350,9 @@ public:
         // We subtract one from the lowest value as we have added a one offset
         // as the underlying hdr_histogram cannot store 0 and
         // therefore the value must be greater than or equal to 1.
-        return static_cast<uint64_t>(histogram->highest_trackable_value) - 1;
+        return static_cast<uint64_t>(
+                       histogram.rlock()->get()->highest_trackable_value) -
+               1;
     }
 
     /**
@@ -332,7 +362,7 @@ public:
      * figures bing used
      */
     int getSigFigAccuracy() const {
-        return histogram->significant_figures;
+        return histogram.rlock()->get()->significant_figures;
     }
 
     /**
@@ -359,9 +389,9 @@ private:
     Iterator::IterMode defaultIterationMode;
 
     /**
-     * unique_ptr to a hdr_histogram structure
+     * Synchronized unique pointer to a struct hdr_histogram
      */
-    std::unique_ptr<struct hdr_histogram, HdrDeleter> histogram;
+    SyncHdrHistogramPtr histogram;
 };
 
 /** Histogram to store counts for microsecond intervals
